<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="0dp"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/display"
        android:textAlignment="textEnd"
        android:textSize="30sp"
        android:autofillHints="none"
        android:id="@+id/input"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:orientation="vertical">

        <ImageButton
            android:layout_width="70dp"
            android:layout_height="50dp"
            android:text=""
            android:background="@drawable/circle"
            android:src="@drawable/backspace"
            android:textColor="@color/black"
            android:layout_gravity="right"
            android:layout_margin="5dp"
            android:backgroundTint="#E91E63"
            android:id="@+id/backspaceBtn"

            />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="0dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <Button
                    android:id="@+id/clearBtn"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="0dp"
                    android:layout_height="70dp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/circle"
                    android:textColor="#fff"
                    android:textSize="24sp"
                    app:backgroundTint="@null"
                    tools:text="@string/clear"
                    android:onClick="clearBTN"
                    />

                <Button
                    android:id="@+id/parBtn"
                    style="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
                    android:layout_width="0dp"
                    android:layout_height="70dp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/circle"
                    android:text="@string/parenthesis"
                    android:textColor="#fff"
                    android:textSize="24sp"
                    app:backgroundTint="@null"
                    android:onClick="clearBTN"
                    />


                <Button
                    android:id="@+id/expoBtn"
                    style="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
                    android:layout_width="0dp"
                    android:layout_height="70dp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/circle"
                    android:text="@string/exponent"
                    android:textColor="#fff"
                    android:textSize="24sp"
                    app:backgroundTint="@null"
                    android:onClick="clearBTN"
                    />

                <Button
                    android:id="@+id/devisionBtn"
                    style="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
                    android:layout_width="0dp"
                    android:layout_height="70dp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/circle"
                    android:text="@string/divide"
                    android:textColor="#fff"
                    android:textSize="24sp"
                    app:backgroundTint="@null"

                    />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/sevenBtn"
                    style="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
                    android:layout_width="0dp"
                    android:layout_height="70dp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/circle"
                    android:text="@string/seven"
                    android:textColor="#fff"
                    android:textSize="24sp"
                    app:backgroundTint="@null"
                    android:onClick="sevenBTN"
                    />

                <Button
                    android:id="@+id/eightBtn"
                    style="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
                    android:layout_width="0dp"
                    android:layout_height="70dp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/circle"
                    android:text="@string/eight"
                    android:textColor="#fff"
                    android:textSize="24sp"
                    app:backgroundTint="@null"
                    android:onClick="eightBTN"
                    />

                <Button
                    android:id="@+id/nineBtn"
                    style="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
                    android:layout_width="0dp"
                    android:layout_height="70dp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/circle"
                    android:text="@string/nine"
                    android:textColor="#fff"
                    android:textSize="24sp"
                    app:backgroundTint="@null"
                    android:onClick="nineBTN"
                    />

                <Button
                    android:id="@+id/mulBtn"
                    style="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
                    android:layout_width="0dp"
                    android:layout_height="70dp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/circle"
                    android:backgroundTint="@color/button_color"
                    android:text="@string/by"
                    android:textColor="#fff"
                    android:textSize="24sp"
                    app:backgroundTint="@null"
                    android:onClick="mulBTN"
                    />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/fourBtn"
                    style="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
                    android:layout_width="0dp"
                    android:layout_height="70dp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/circle"
                    android:text="@string/four"
                    android:textColor="#fff"
                    android:textSize="24sp"
                    app:backgroundTint="@null"
                    android:onClick="fourBTN"


                    />

                <Button
                    android:id="@+id/fiveBtn"
                    style="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
                    android:layout_width="0dp"
                    android:layout_height="70dp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/circle"
                    android:text="@string/five"
                    android:textColor="#fff"
                    android:textSize="24sp"
                    app:backgroundTint="@null"
                    android:onClick="fiveBTN"
                    />

                <Button
                    android:id="@+id/sixBtn"
                    style="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
                    android:layout_width="0dp"
                    android:layout_height="70dp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/circle"
                    android:text="@string/six"
                    android:textColor="#fff"
                    android:textSize="24sp"
                    app:backgroundTint="@null"
                    android:onClick="sixBTN"
                    />

                <Button
                    android:id="@+id/subBtn"
                    style="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
                    android:layout_width="0dp"
                    android:layout_height="70dp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/circle"
                    android:text="@string/minus"
                    android:textColor="#fff"
                    android:textSize="24sp"
                    app:backgroundTint="@null"
                    android:onClick="subBTN"


                    />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/oneBtn"
                    style="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
                    android:layout_width="0dp"
                    android:layout_height="70dp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/circle"
                    android:text="@string/one"
                    android:textColor="#fff"
                    android:textSize="24sp"
                    app:backgroundTint="@null"
                    android:onClick="oneBTN"
                    />

                <Button
                    android:id="@+id/twoBtn"
                    style="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
                    android:layout_width="0dp"
                    android:layout_height="70dp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/circle"
                    android:text="@string/two"
                    android:textColor="#fff"
                    android:textSize="24sp"
                    app:backgroundTint="@null"
                    android:onClick="twoBTN"

                    />

                <Button
                    android:id="@+id/threeBtn"
                    style="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
                    android:layout_width="0dp"
                    android:layout_height="70dp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/circle"
                    android:text="@string/three"
                    android:textColor="#fff"
                    android:textSize="24sp"
                    app:backgroundTint="@null"
                    android:onClick="threeBTN"

                    />

                <Button
                    android:id="@+id/addBtn"
                    style="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
                    android:layout_width="0dp"
                    android:layout_height="70dp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/circle"
                    android:text="@string/add"
                    android:textColor="#fff"
                    android:textSize="24sp"
                    app:backgroundTint="@null"
                    android:onClick="addBTN"

                    />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="81dp">

                <Button
                    android:id="@+id/plusMinusBtn"
                    style="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
                    android:layout_width="0dp"
                    android:layout_height="70dp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/circle"
                    android:text="@string/plusMinus"
                    android:textColor="#fff"
                    android:textSize="24sp"
                    app:backgroundTint="@null"
                    android:onClick="plusMinusBTN"


                    />

                <Button
                    android:id="@+id/zeroBtn"
                    style="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
                    android:layout_width="0dp"
                    android:layout_height="70dp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/circle"
                    android:text="@string/zero"
                    android:textColor="#fff"
                    android:textSize="24sp"
                    app:backgroundTint="@null"
                    android:onClick="zeroBTN"
                    />

                <Button
                    android:id="@+id/pointBtn"
                    style="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
                    android:layout_width="0dp"
                    android:layout_height="70dp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/circle"
                    android:text="@string/point"
                    android:textColor="#fff"
                    android:textSize="24sp"
                    app:backgroundTint="@null"
                    android:onClick="pointBTN"

                    />

                <Button
                    android:id="@+id/equalBtn"
                    style="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
                    android:layout_width="0dp"
                    android:layout_height="70dp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/circle"
                    android:text="@string/equal"
                    android:textColor="#fff"
                    android:textSize="24sp"
                    app:backgroundTint="@null"
                    android:onClick="equalBTN"


                    />

            </TableRow>

        </TableLayout>
    </LinearLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />
</LinearLayout>